force-app/main/default/objects/Order_Operation__c.object
<CustomObject>
    <fields>
        <fullName>Control_Key__c</fullName>
        <label>Control Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center_Text__c</fullName>
        <formula>Main_Work_Center__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main Work Center</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Order Operations</relationshipLabel>
        <relationshipName>Order_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Shot_Text__c</fullName>
        <label>Operation Short Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Text__c</fullName>
        <label>Operation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation</label>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>Order Operations</relationshipLabel>
        <relationshipName>Order_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderOperation__c</fullName>
        <externalId>true</externalId>
        <label>OrderOperation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Operations</relationshipLabel>
        <relationshipName>Order_Operations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Order Operations (Plant)</relationshipLabel>
        <relationshipName>Order_Operations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubOperation__c</fullName>
        <label>SubOperation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Operation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Order Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>